     gl.CreateVertexArray(number elemsCount, number indexCount) -> number id | nil
     gl.DeleteVertexArray(number id) -> boolean success | nil
     gl.UpdateVertexArray(number id, number minIndex, number maxIndex, table vertexData | function updateFunc [, args...]) -> boolean success | nil
     gl.RenderVertexArray(number id) -> boolean success | nil
 - add `VFS.GAME` as a synonym to `VFS.MOD`
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this
 - move GetConfig* to LuaUnsyncedRead
 - Add Spring.SetVideoCapturingTimeOffset() for > 30fps video capturing
 - default `defs.lua` now reads a new file, `defs_post.lua`, which
   currently filters out movedefs unused by any unitdef (previously
   this was done by the engine). You can prevent this filter by adding
   the `dont_remove` field to such movedefs. This is useful to make
   them available in `Spring.MoveCtrl.SetMoveDef` but beware the perf cost.
 - new TextEditing(utf8, start, length) callin, which holds the IME editing composition (https://wiki.libsdl.org/Tutorials/TextInput)
 - new SDLSetTextInputRect(x, y, w, h), SDLStartTextInput() and SDLStopTextInput() functions for controlling IME input from Lua
 - Add AllowUnitTransport callin. Called when the engine tests whether unit A can transport unit B. Returning true will let
   the engine decide, returning false will force the engine to disallow transportation (for this specific call).
 - add AllowUnitTransport{Load,Unload} callins for controlling whether unit A can start {un}loading unit B
 - add AllowUnit{Cloak,Decloak} callins for controlling whether a unit can become {de}cloaked
 - new unit rules param access level, 'typed': between 'inlos' and 'inradar', applicable when the unit has once been in LoS
   and continuously in radar since (same rule as `GetUnitLosState(x).typed` and typed engine icons)